# mcp-test

./: .env_example  .gitignore  .server_config.json  README.md  amadeus_params.json  app.py  cli_app.py  client.ipynb  client.py  client_no_tool.py  client_old.py  directory_listing.txt  flight_formatter.py  git_log.txt  gmail_test.py  gradio_app.py  gradio_tool_test.py  pyproject.toml  system_prompt.txt  test.ipynb  thinking_client.py  tui_test.py  tui_test2.py
.cursor/rules/: mcp-full.mdc
server/: code_executor.py  gmail_server.py  google_flights.py  response_return.json  sample_response.json  weather.py
