[project]
name = "mcp-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "duckduckgo-search>=8.0.1",
    "geopy>=2.4.1",
    "gradio>=5.29.0",
    "mcp[cli]>=1.8.1",
    "openai>=1.78.1",
    "pylint>=3.3.7",
    "requests>=2.32.3",
    "rich>=14.0.0",
]
