[project]
name = "mcp-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.1",
    "geopy>=2.4.1",
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-search-results>=2.4.2",
    "gradio>=5.29.0",
    "ipykernel>=6.29.5",
    "mcp-server-fetch>=2025.4.7",
    "mcp[cli]>=1.8.1",
    "openai>=1.78.1",
    "prompt-toolkit>=3.0.51",
    "pylint>=3.3.7",
    "pytoml>=0.1.21",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "textual>=3.2.0",
    "textual-dev>=1.7.0",
    "toml>=0.10.2",
]
